@@ -1,0 +1,12 @@
+// PR c++/38701, 38702
+// { dg-options "-std=c++0x" }
+
+void foo() = default;		// { dg-error "cannot be defaulted" }
+namespace
+{
+  void bar() = default;		// { dg-error "cannot be defaulted" }
+}
+
+enum E { e };
+
+E& operator |= (E&, const E&) = default; // { dg-error "cannot be defaulted" }
