@@ -1,3 +1,7 @@
+2009-01-05  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/defaulted7.C: New test.
+
 2009-01-05  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/38672
